--- a/Fuente/LabSecMobile/app/src/main/AndroidManifest.xml
+++ b/Fuente/LabSecMobile/app/src/main/AndroidManifest.xml
@@ -9,15 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DeviceFormActivity"></activity>
+        <activity android:name=".DeviceFormActivity"/>
         <activity android:name=".DeviceListActivity" />
         <activity android:name=".LabFormActivity" />
         <activity android:name=".LabsListActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
