--- a/Fuente/LabSecMobile/app/src/main/AndroidManifest.xml
+++ b/Fuente/LabSecMobile/app/src/main/AndroidManifest.xml
@@ -10,6 +10,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:fullBackupContent="@xml/backup_descriptor">
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/ic_stat_icon" />
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/colorAccent" />
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="LabSecChannel" />
+
         <activity android:name=".DeviceFormActivity"/>
         <activity android:name=".DeviceListActivity" />
         <activity android:name=".LabFormActivity" />
@@ -21,6 +34,13 @@
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
+        <service
+            android:name=".MessageService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
